--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -1,10 +1,10 @@
-<div class="col-xs-12" *ngIf="!items">
+<div class="col-xs-12" *ngIf="items.length === 0">
   <p>
-    Não há itens no seu carrinho. <a [routerLink]="['/resturants']">Clique aqui para adicionar os itens.</a>
+    Não há itens no seu carrinho. <a [routerLink]="['/restaurants']">Clique aqui para adicionar os itens.</a>
   </p>
 </div>
 
-<div class="col-xs-12 table-responsive" *ngIf="items">
+<div class="col-xs-12 table-responsive" *ngIf="items.length > 0">
   <table class="table table-striped">
     <thead>
     <tr>
