--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,7 +5,7 @@
 <section class="content">
   <section class="invoice">
 
-        <form #form="ngForm" novalidate>
+        <form [formGroup]="orderForm" novalidate>
           <div class="row">
             <div class="col-xs-12">
               <h2 class="page-header">
@@ -14,24 +14,52 @@
             </div>
           </div>                
 
-          <div class="row invoice-info">
+          <div class="row">
+            <div class="col-xs-12 col-sm-9">
+              <p class="lead">Seus dados:</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-3">
+              <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')"><i class="fa fa-remove"></i> E-mails não conferem</span>
+            </div>
+
+            <div class="col-sm-6 col-xs-12">
+              <mt-input-container errorMessage="Campo obrigatório e com no mínimo 5 caracteres" label="Nome">
+                <input type="text" class="form-control" formControlName="name" placeholder="Nome" autocomplete="off" />
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                <input type="text" class="form-control" formControlName="email" placeholder="E-mail" autocomplete="off">
+              </mt-input-container>
+              
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido" label="Confirmação do e-mail">
+                <input type="text" class="form-control" formControlName="emailConfirmation" placeholder="Confirmação do e-mail">
+              </mt-input-container>
+            </div>
+
+          </div>
+
+          <div class="row">
             <div class="col-xs-12">
               <p class="lead">Endereço de Entrega:</p>
             </div>
             <div class="col-sm-6 col-xs-12">
               <mt-input-container errorMessage="Campo obrigatório e com no mínimo 5 caracteres" label="Endereço">
-                <input type="text" class="form-control" name="address" ngModel placeholder="Endereço" required minlength="5" autocomplete="off" />
+                <input type="text" class="form-control" formControlName="address" placeholder="Endereço" autocomplete="off" />
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container errorMessage="Obrigatório e somente números" label="Número">
-                <input type="text" class="form-control" name="number" required ngModel pattern="^[0-9]*$" placeholder="Número" autocomplete="off">
+                <input type="text" class="form-control" formControlName="number" placeholder="Número" autocomplete="off">
               </mt-input-container>
               
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container label="Complemento">
-                <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
+                <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
               </mt-input-container>
             </div>
             <!-- /.col -->
@@ -60,7 +88,7 @@
               <p class="lead">Formas de Pagamento:</p>
 
                 <div class="form-group">
-                   <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+                   <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
                 </div>
 
             </div>
@@ -78,8 +106,8 @@
 
         <div class="row">
           <div class="col-xs-12">
-            <button (click)="checkOrder(form.value)" href="order-summary.html" class="btn btn-success pull-right" 
-              [disabled]="form.invalid || cartItems().length === 0">
+            <button (click)="checkOrder(orderForm.value)" href="order-summary.html" class="btn btn-success pull-right" 
+              [disabled]="orderForm.invalid || cartItems().length === 0">
               <i class="fa fa-credit-card"></i> Concluir Pedido
             </button>
           </div>
